--- a/Object_Detection.Rmd
+++ b/Object_Detection.Rmd
@@ -66,7 +66,7 @@ test_yolo %>% load_darknet_weights("C:/Users/gabri/Downloads/yolov3.weights")
 
 >**Note**: The _yolov3.weights_ file is too large to be loaded to github. Therefore, you should download and run the code with the weights. 
 
-##### 4. Calculate predictions for new images
+##### 4. Calculate predictions for the images
 
 ```{r}
 train_img_paths <- list.files("Example_Images",  full.names = TRUE, pattern = ".jpg", all.files = TRUE)
@@ -86,7 +86,9 @@ train_preds <- test_yolo %>%
   predict(train_imgs) 
 ```
 
->**Note**: The same code is used for training and test data. The crucial point that needs to be changes is in importing the files. For training data use _"Dataset/Train_filtered"_ and for test data use _"Dataset/Test_filtered"_. Also we recommend adapting the name of variables according to the type of dataset.
+>**Note**: In this example, we use **small sample** of the original database. 
+
+>**Note**: The same code is used for training and test data. The crucial point that needs to be changed is in importing the files. For training data use _"Dataset/Train_filtered"_ and for test data use _"Dataset/Test_filtered"_. Also we recommend adapting the name of variables according to the type of dataset.
 
 ##### 5. Transform raw predictions into bounding boxes:
 
@@ -121,7 +123,7 @@ images_names = gsub(pattern = "\\.jpg$", "", basename(train_img_paths))
 
 >Note: In the paper we tested only the format _"c"_. 
 
-###### a) Tranform the labels in Yolo format and save in the Labels folder with the same name as the respective image.
+###### a) Tranform the labels into YOLO format and save in a folder with the same name as the respective image.
 
 ```{r}
 Exportlabels_txt = function(){
@@ -133,7 +135,7 @@ table_yolo = data.frame(labels[i]) %>%
          width = xmax - xmin,
          height = ymax - ymin) %>% 
   select(class_id, x_centre, y_centre, width, height) %>% 
-  write.table(file = paste0("Train/Labels/", images_names[i], ".txt"), sep = ",", row.names = FALSE, col.names = FALSE)   #Save labels in folder
+  write.table(file = paste0("Dataset/Features/", images_names[i], ".txt"), sep = ",", row.names = FALSE, col.names = FALSE)   #Put the path of the folder where the images should be saved
   }}
 
 #Exportlabels_txt()
@@ -143,6 +145,8 @@ table_yolo = data.frame(labels[i]) %>%
 
 * YOLO format = [class_id, x_centre, y_centre, width, height].
 
+>**Note**: Adjust the path where the features should be saved and activate the "Exportlabels_txt()" function. This step should also be done when exporting other labels.  
+
 ###### b) Export labels with a single vector presenting the classes 
 
 ```{r}
@@ -151,13 +155,13 @@ Exportlabels_Class_txt = function(){
     table_yolo = data.frame(labels[i]) %>%
       mutate(class_id = label_id) %>% 
       select(class_id) %>% 
-      write.table(file = paste0("Train/Labels_Class/", images_names[i], ".txt"), sep = ",", row.names = FALSE, col.names = FALSE) #Save labels in folder
+      write.table(file = paste0("Train/Labels_Class/", images_names[i], ".txt"), sep = ",", row.names = FALSE, col.names = FALSE) ##Put the path of the folder where the images should be saved
   }}
 
 #Exportlabels_Class_txt()
 ```
 
->**Note**: In the Coco dataset that the YOLOv3 was trained, the classes _Car_; _bus_; _truck_; _person_; _bicycle_; correspond to the following id: [3, 6, 8, 1, 2]. 
+>**Note**: In the COCO dataset that the YOLOv3 was trained, the classes _Car_; _bus_; _truck_; _person_; _bicycle_; correspond to the following id: [3, 6, 8, 1, 2]. 
 
 ###### c) Export labels as a vector with dummy variable analyzing if the class is present or not in the image (dummy variable)
 
@@ -192,5 +196,3 @@ plot_boxes(
   labels = coco_labels, # Class labels
 )
 ```
-
-
