--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ The methodology consists of three main tasks:
 
 We extracted street images from the Mapillary database. Then performed a manual filtering process, removing images of low quality. The database after filtered can be found [here]("Database/Images/"). To avoid overfitting, we performed image augmentation. 
 
-* object detection/ segmentation: 
+* Object detection/ segmentation: 
 
 We perform object detection in this example, to use the vehicles as features in the generative deep model. We suggest that future studies use image segmentation.  
 
@@ -35,19 +35,50 @@ We perform object detection in this example, to use the vehicles as features in 
 
 We tested two types of models. The aim is to generate images conditioned by specific features (Conditional Variational Autoencoder). However, we also tried a simpler version of the model, without the features (Variational Autoencoder) to have clearer conclusions of the outputs. 
 
-Outline:
+### Outline:
 
-### Guidelines
+#### [1. Dataset]("Dataset/")
+
+a) The original dataset used for [Training]("Dataset/Images/Train_filtered/") and [Test]("Dataset/Images/Test_filtered/") filtered manually, without augmentation.
+
+b) Features extracted from object detection in two formats for inputs in the Conditional Variational Autoencoder: 
+
+* Dummy variables indicating if objects were present or not in the image for [Training]("Dataset/Features/Features_Dummy_Train/") and [Test]("Dataset/Features/Features_Dummy_Test/); 
+
+* Counting the number of each object present in the image for [Training]("Dataset/Features/Features_Class_Train/") and [Test]("Dataset/Features/Features_Class_Test"). 
+
+>**Note**: In the example of the paper we used only the first option as inputs for the Conditional Variational Autoencoder. However, we make available the code and dataset for both options. 
+
+#### [2. Codes]("Codes/")
+
+We share the codes in R used for the preprocessing of the images (image augmentation and object detection) and also to perform the variational autoenconder (only images as inputs) and the conditional variational autoencoder (images and features as inputs). 
 
 ##### Preprocessing 
 
-[1. Image Augmentation](Image_Augmentation.md)
+a. [Image augmentation]("Codes/Image_Augmentation.R")
 
-[2. Object Detection](Object_Detection.md)
+b. [Object detection]("Codes/Object_Detection.R")
 
 ##### Generative Deep Modelling
 
-[3. Variational Autoencoder](VAE.md)
+c. [Variational Autoencoder]("Codes/VAE_StreetDesign.R")
 
-4. Conditional Variational Autoencoder
+d. [Conditional Variational Autoencoder]("Codes/ConditionalVAE_StreetDesign.R)
+
+
+#### [3. Guidelines]("Guidelines/")
+
+We reproduce some results in RMarkdown in order for an easier understanding of the steps taken in each task. 
+
+##### Preprocessing 
+
+a. [Image Augmentation]("Guidelines/Image_Augmentation.md")
+
+b. [Object Detection]("Guidelines/Object_Detection.md")
+
+##### Generative Deep Modelling
+
+c. [Variational Autoencoder]("Guidelines/VAE.md")
+
+d. [Conditional Variational Autoencoder]("Guidelines/CVAE.md")
 
