--- a/VAE.Rmd
+++ b/VAE.Rmd
@@ -25,7 +25,7 @@ library(readxl)
 library(listarrays)
 ```
 
-##### 2. Import and treat datasets
+##### 2. Import datasets
 
 ```{r message=FALSE, warning=FALSE}
 files_train <- list.files("Dataset/Images/Train_filtered",  full.names = TRUE, pattern = ".jpg", all.files = TRUE)
@@ -33,7 +33,7 @@ files_train <- list.files("Dataset/Images/Train_filtered",  full.names = TRUE, p
 files_test <- list.files("Dataset/Images/Test_filtered",  full.names = TRUE, pattern = ".jpg", all.files = TRUE)
 ```
 
-##### Resize images and assign to a list. 
+##### 3. Resize images and assign to a list. 
 
 **a) Training data**
 
@@ -108,7 +108,7 @@ test_array <- array(unlist(Results_test), dim=c(n_images_test,img_rows, img_cols
 ```
 
 
-##### 3. Data preparation 
+##### 4. Data preparation 
 
 ```{r}
 x_train <- train_array %>% 
@@ -129,7 +129,7 @@ dim(x_train)
 dim(x_test)
 ```
 
-##### 4. VARIATIONAL AUTOENCODER
+##### 5. VARIATIONAL AUTOENCODER
 
 **a) Training parameters** 
 
