--- a/CVAE.Rmd
+++ b/CVAE.Rmd
@@ -38,29 +38,66 @@ labels_test <- read_excel('Dataset/Features/Features_Dummy_Test/Labels_Dummy_tes
 
 ```
 
-##### 3. Preprocessing dataset
+##### 3.Data preprocessing 
+
+**a) Training data**
+
+* **IMAGES**
+
+######  Resize images and assign to a list 
+```{r}
+Results_train <- list()
+for(i in seq_along(files_train)){
+  Image <- readImage(files_train[i]) 
+  Resized <- resizeImage(Image, width = 24, height = 32) #uniform size of images
+  Results_train[[i]] <- Resized
+}
+```
+
+
+#Check the number of dimensions
+dim(Results_train[[2]])
+# 240(height-row) x 320(width-column) x 3(channels - RGB) 
+
+
+#show images
+imageShow(Results_train[[300]])
+
+# Convert list of images into arrays
+#train_array <- array()
+#for (i in 1:length(Results_train)){
+#train_array[i] <- image_to_array(Results_train[[i]], data_format = "channels_last")
+#}
+
+train_array <- array(unlist(Results_train), dim=c(1265,24,32,3))
+dim(train_array)
+
+
+dim(train_array)
+print(train_array[1])
+
+* **FEATURES**
+
+###### Convert labels into a Dummy (with or without the object). Filter only the detection of pedestrians. 
 
 ```{r}
+#labels_train$X.person. <- as.integer(labels_train$X.person.)
 
+y_t <- data.frame(labels_train[-c(1:3)]) %>% 
+  as.matrix()
 ```
 
+>**Note**: fasfasfo+sakfoasfkaspofaskpofaskposakfsap
 
-This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated.
+#Use all the labels in the image. 
 
-## Including Code
+#labels_train$X.car. <- as.integer(labels_train$X.car.)
+#labels_train$X.bus. <- as.integer(labels_train$X.bus.)
+#labels_train$X.truck. <- as.integer(labels_train$X.truck.)
 
-You can include R code in the document as follows:
-
-```{r cars}
-summary(cars)
+###### Convert feature into dummy. 
+```{r}
+y_train <- to_categorical(y_t, num_classes = NULL, dtype="float32")
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+###### 
